# paranoid

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  deny.toml  docker-compose.test.yml  oxfmt.config.ts  package.json  pnpm-lock.yaml
benches/: id.results.txt  id.rs
docs/maintainer/: component-schema-migrations.md  release-instructions.md
docs/specs/: envelope-v1.md
fuzz/: Cargo.toml
fuzz/corpus/paranoid_codecs/: base64url-key32  crockford-base32-id  invalid-symbols  mnemonic-secret
fuzz/corpus/paranoid_db_validators/: invalid-text  key-parts  qualified-table  queue-tables  valid-identifier
fuzz/fuzz_targets/: paranoid_codecs.rs  paranoid_db_validators.rs  paranoid_envelope.rs  paranoid_id.rs
playgrounds/local_env_vault/: Cargo.toml  Makefile  README.md
playgrounds/local_env_vault/src/: main.rs
src/: fleet.rs  id.rs  kv.rs  lib.rs  local_lock.rs  queue.rs
src/auth_core/: active_proof.rs  active_proof_model.rs  active_proof_support.rs  auth_system_model.rs  challenge_cookie_model.rs  command_model.rs  commit_audit.rs  commit_effect.rs  commit_method.rs  commit_mutation.rs  commit_plan.rs  commit_transaction_model.rs  config_model.rs  core_error.rs  credential_lifecycle.rs  credential_model.rs  email_otp_method.rs  execution_model.rs  identity.rs  input_limits.rs  load_contract_model.rs  loaded_state_model.rs  method_adapter_contract_model.rs  method_response_material_model.rs  mod.rs  mounted_admin_support_model.rs  mounted_admin_support_service.rs  mounted_credential_lifecycle_model.rs  mounted_credential_lifecycle_service.rs  mounted_durable_effect_worker_service.rs  mounted_runtime_model.rs  mounted_subject_lifecycle_model.rs  mounted_subject_lifecycle_service.rs  outcome_model.rs  postgres_adapter_execution_model.rs  postgres_bootstrap.rs  postgres_durable_effect_queue.rs  postgres_method_runtime.rs  postgres_method_schema.rs  postgres_password_derived_signature_method.rs  (+19 more)
src/auth_core/mounted_runtime_model/: body_parsing.rs  errors.rs  http_service.rs  protected_layers.rs  response_rendering.rs  route_execution.rs  route_guarding.rs  route_manifest.rs  route_service.rs  route_types.rs  system_config.rs  system_services.rs
src/auth_core/postgres_runtime/: active_proof_challenge_runtime.rs  active_proof_response_runtime.rs  admin_support_runtime.rs  credential_read_and_addition_runtime.rs  credential_regeneration_rotation_runtime.rs  credential_replacement_removal_runtime.rs  credential_reset_runtime.rs  pending_credential_lifecycle_runtime.rs  request_session_device_runtime.rs  subject_lifecycle_runtime.rs
src/auth_core/postgres_store/: codecs.rs  commit.rs  config.rs  errors.rs  load_paths.rs  method_commit.rs  mutations.rs  preconditions.rs  query_helpers.rs  row_reads.rs  row_writes.rs  schema.rs  secrets.rs  test_support.rs  transactions.rs
src/auth_core/tests/: active_proof_commit_guards.rs  active_proof_configured_secret_fast_fail.rs  active_proof_guards.rs  active_proof_revocation_guards.rs  commit_adapters.rs  commit_guard_matrix.rs  config_validation.rs  credential_lifecycle.rs  credential_metadata.rs  credential_recovery_authority.rs  csrf_cycle_guards.rs  execution_boundary.rs  in_memory_commit_store.rs  in_memory_commit_store_atomicity.rs  input_validation.rs  load_contract.rs  (+25 more)
src/crypto/: bip39_english_words.rs  bytes.rs  codecs.rs  envelope.rs  error.rs  keyset.rs  mod.rs  tests.rs  token.rs
src/db/: bootstrap.rs  component_schema.rs  error.rs  identifier.rs  mod.rs  operation_observer.rs  pool.rs  portable_query.rs  postgres_test_support.rs  schema.rs  schema_ledger.rs  schema_migration.rs  sql_state.rs  testing.rs  tests.rs  time.rs  write_pool_marker_postgres_tests.rs
src/local_env_vault/: child_process.rs  error.rs  mod.rs  terminal.rs  tests.rs  vault_file.rs  vault_io.rs
src/web/: error.rs  mod.rs
tests/: db_bootstrap_postgres.rs  db_fleet_postgres.rs  db_kv_postgres.rs  db_queue_postgres.rs  db_write_pool_marker_postgres.rs  web_stack.rs
tests/common/: mod.rs
tests/db_fleet_postgres/: api_surface.rs  cache.rs  counter.rs  cron.rs  cron_run_once_errors.rs  cron_support.rs  mutex.rs  once.rs  rate_limiter_and_circuit_breaker.rs  schema_and_keys.rs  schema_migration.rs  semaphore.rs  subscription_loop.rs  throttler_core.rs  topic.rs  topic_transactions_and_concurrency.rs
tests/db_kv_postgres/: byte_atomic_mutation_timing.rs  byte_atomic_mutations.rs  byte_live_atomic_mutations.rs  byte_operations.rs  byte_ttl_and_prefix_operations.rs  cancellation_and_locks.rs  db_access.rs  schema.rs  schema_validation_columns.rs  schema_validation_indexes.rs  support.rs  typed_item_atomic_mutations.rs  typed_item_contention.rs  typed_item_lifecycle.rs  typed_item_roundtrip_and_edges.rs  typed_item_scan_and_lifecycle.rs  typed_plain_items.rs
tests/db_lease_postgres/: lifecycle.rs  schema.rs  support.rs  transactions_and_concurrency.rs
tests/db_queue_postgres/: dead_letter_cancellation.rs  enqueue_and_observability.rs  locking.rs  maintenance_and_listing.rs  maintenance_locking.rs  maintenance_stage_errors.rs  retry_and_dead_letter.rs  schema.rs  schema_operation_contracts.rs  schema_validation.rs  transactions.rs  worker_cleanup_failures.rs  worker_fleet_maintenance.rs  worker_locking.rs  worker_loop.rs  worker_loop_shutdown.rs  worker_once.rs  worker_once_claims.rs  worker_once_support.rs
xtask/: Cargo.toml
xtask/src/: fuzz_gate.rs  gate.rs  isolated_test_db.rs  main.rs
(+255 files in other folders)
