[workspace]
members = ["fuzz", "xtask"]

[workspace.package]
version = "0.0.0-pre.2"
edition = "2024"
license = "MIT OR Apache-2.0"

[package]
name = "paranoid"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Misuse-resistant application security and Postgres-backed distributed systems primitives."
readme = "README.md"
repository = "https://github.com/sjc5/paranoid"

[dependencies]
aes-gcm-siv = { version = "0.11.1", optional = true }
argon2 = { version = "0.5.3", features = ["zeroize"], optional = true }
blake3 = { version = "1.8.5", features = ["zeroize"], optional = true }
bs58 = { version = "0.5.1", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
cookie = { version = "0.18.1", optional = true }
data-encoding = { version = "2.11.0", optional = true }
getrandom = { version = "0.3.4", optional = true }
http = { version = "1.4.0", optional = true }
postcard = { version = "1.1.3", features = ["alloc"], optional = true }
ring = { version = "0.17.14", optional = true }
rpassword = { version = "7.4.0", optional = true }
secrecy = { version = "0.10.3", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
sqlx = { version = "0.9.0", default-features = false, features = [
	"postgres",
	"runtime-tokio",
	"tls-rustls",
	"time",
], optional = true }
subtle = { version = "2.6.1", optional = true }
thiserror = { version = "2.0.18", optional = true }
tokio = { version = "1.52.3", default-features = false, features = [
	"macros",
	"rt",
	"sync",
	"time",
], optional = true }
tower-layer = { version = "0.3.3", optional = true }
tower-service = { version = "0.3.3", optional = true }
url = { version = "2.5.8", optional = true }
zeroize = { version = "1.8.2", optional = true }

[features]
default = []
crypto = [
	"dep:aes-gcm-siv",
	"dep:argon2",
	"dep:blake3",
	"dep:bs58",
	"dep:chacha20poly1305",
	"dep:data-encoding",
	"dep:getrandom",
	"dep:postcard",
	"dep:ring",
	"dep:secrecy",
	"dep:serde",
	"dep:subtle",
	"dep:zeroize",
]
db = ["crypto", "id", "dep:serde_json", "dep:sqlx", "dep:thiserror", "dep:tokio"]
id = ["dep:data-encoding", "dep:getrandom"]
local-env-vault = ["crypto", "local-lock", "dep:rpassword", "dep:serde_json"]
local-lock = ["dep:serde", "dep:serde_json"]
web = [
	"crypto",
	"dep:cookie",
	"dep:http",
	"dep:tower-layer",
	"dep:tower-service",
	"dep:url",
]

[dev-dependencies]
base64 = "0.22.1"
proptest = "1.6.0"
rand = "0.9.4"
rand_chacha = "0.9.0"
sha2 = "0.10.9"
tokio = { version = "1.52.3", default-features = false, features = [
	"macros",
	"rt-multi-thread",
] }

[[test]]
name = "db_fleet_postgres"
required-features = ["db"]

[[test]]
name = "db_kv_postgres"
required-features = ["db"]

[[test]]
name = "db_queue_postgres"
required-features = ["db"]

[[test]]
name = "web_stack"
required-features = ["web"]

[[bench]]
name = "id"
harness = false
required-features = ["id"]
