[package]
name = "paranoid-fuzz"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.paranoid]
path = ".."
default-features = false
features = ["db"]

[[bin]]
name = "paranoid_envelope"
path = "fuzz_targets/paranoid_envelope.rs"
test = false
doc = false
bench = false

[[bin]]
name = "paranoid_codecs"
path = "fuzz_targets/paranoid_codecs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "paranoid_id"
path = "fuzz_targets/paranoid_id.rs"
test = false
doc = false
bench = false

[[bin]]
name = "paranoid_db_validators"
path = "fuzz_targets/paranoid_db_validators.rs"
test = false
doc = false
bench = false
