[package]
name = "paranoid-xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
pg-embed = "1.0.0"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
sha2 = "0.10.9"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "time"] }
tokio-postgres = "0.7.15"
