[package]
name = "paranoid-xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
pg-embed = { version = "1.0.0", default-features = false, features = ["rt_tokio"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
sha2 = "0.10.9"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "time"] }
tokio-postgres = "0.7.15"
